--- a/style.css
+++ b/style.css
@@ -37,3 +37,51 @@ a {
     padding: 0;
 }
 
+body {
+    background-color: black !important;
+}
+
+#video {
+    width: 20%;
+}
+.most__popular {
+    position: relative;
+    color: rgb(252, 7, 7);
+    text-align: center;
+    margin-top: 2%;
+    font-weight: bolder;
+    font-size: 50px;
+}
+
+.hr {
+    color: rgb(255, 0, 0);
+    width: 50%;
+    position: relative;
+    text-align: center;
+    margin-left: 25%;
+    border: solid 2px rgb(255, 0, 0);
+}
+
+#popular__games {
+    display: grid;
+    grid-template-columns: repeat(3, 350px);
+    gap: 15px;
+
+    position: relative;
+    margin-left: 22%;
+}
+
+.card-body {
+   text-align: center;
+}
+
+@media(max-width: 1280px) {
+    * {
+        /* overflow-x: hidden; */
+    }
+    #popular__games {
+        grid-template-columns: repeat(2, 350px); 
+  
+    } 
+
+}
