--- a/game_pages.css
+++ b/game_pages.css
@@ -1,3 +1,9 @@
 body {
     background-color: black !important;
 }
+
+.containere {
+    position: relative;
+    margin-top: 5%;
+    margin-left: 33%;
+}
